# Kaizen

./: .gitignore  CMakeLists.txt  README.md
imgs/: Kaizen.fig
src/: CMakeLists.txt  main.cpp  mainWindow.cpp  mainWindow.hpp  style.css
src/components/: taskCard.cpp
src/css/: Kaizen.css  Latte.css
src/include/: databaseManager.hpp  mainWindow.hpp  taskCard.hpp  todoWidget.hpp
src/utils/: dataManager.cpp  dataManager.hpp  databaseManager.cpp  resizeFilter.cpp  resizeFilter.hpp  styleManager.cpp  styleManager.hpp
src/widgets/: centralWidget.cpp  centralWidget.hpp  sideBar.cpp  sideBar.hpp  tabWidget.cpp  tabWidget.hpp  todoWidget.cpp  todoWidget.hpp
